2007-08-27  Richard Stallman  <rms@gnu.org>

	* textmodes/flyspell.el (flyspell-mode):
	Catch errors in flyspell-mode-on.

2007-08-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* progmodes/modula2.el (m2-definition, m2-module):
	Don't use previous-line.  Reported by T. V. Raman.

2007-08-27  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-handle-toolbar-switch-mode): Add explicit
	argument to tool-bar-mode call.

2007-08-27  Glenn Morris  <rgm@gnu.org>

	* diff-mode.el (diff-find-file-name): Only accept regular files,
	to rule out /dev/null, directories, etc.

2007-08-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/cperl-mode.el (cperl-indent-level): Autoload the
	safe-local-variable setting.
	* progmodes/perl-mode.el (perl-indent-level): Likewise.

2007-08-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* uniquify.el (uniquify-rationalize-file-buffer-names): Check liveness
	of buffers in uniquify-managed.

	* simple.el (invisible-p): Rename from text-invisible-p.
	Update callers.

2007-08-25  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-langs.el (c-other-decl-block-key-in-symbols-alist):
	new language variable.

	* progmodes/cc-engine.el (c-brace-anchor-point): New function.
	(c-add-stmt-syntax): Give accurate anchor points for "namespace",
	"extern" etc., rather than BOI.  Fix addition of spurious
	syntactic-symbol 'defun-block-intro, replacing it with
	'innamespace, etc.

2007-08-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* pcvs.el (cvs-query-directory): Only prompt when prefix is given.
	Don't behave differently when executed via M-x.  Add doc string.

2007-08-24  Ulrich Mueller  <ulm@gentoo.org>  (tiny change)

	* files.el (backup-buffer-copy): Don't wrap delete in
	condition-case, only try to delete if file exists.

2007-08-24  Glenn Morris  <rgm@gnu.org>

	* files.el (backup-buffer-copy): Revert 2007-08-22 change.

2007-08-23  Stefan Monnier  <monnier@iro.umontreal.ca>
